# llmzoomcamp-2026

./: .gitignore  README.md  agents.ipynb  cleaner_rag_notebook.ipynb  main.py  notebook.ipynb  pyproject.toml  rag-eval.py  rag_helper.py
agentic-rag/: persistent_rag_dataingest.ipynb  persistent_rag_notebook.ipynb  rag_ingest.ipynb
dlt-wrkshp/: 2026-07-23_claude_logs_pipeline_analysis_plan.md  claude_logs_pipeline_dashboard.py  filesystem_pipeline.py  pyproject.toml
dlt-wrkshp/.dlt/: .toolkits  config.toml
evals_llm/: data-gen.ipynb  hw-eval.ipynb  rag-eval-03.ipynb  search-eval-02.ipynb
evals_llm/data/: agent-answers.csv  agent-evaluations.csv  ground_truth-new.csv  rag-answers-new.csv  rag-evaluations-new.csv
llm-vector-search/: main.py  pyproject.toml  vector_search.ipynb  vector_search_persistent.ipynb  vector_search_pgvector.ipynb
llm-zoomcamp-hw5/: hw5.ipynb  pyproject.toml
llm-zoomcamp-onnx/: onnx.ipynb  pyproject.toml
monitoring_llm/: Makefile  app.py  assistant.py  dashboard.py  db_init.py  db_query.py  judge.py  metrics.py
