[project]
name = "llmzoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.1",
    "streamlit>=1.59.2",
    "toyaikit>=0.0.11",
]

[tool.uv.workspace]
members = [
    "llm-zoomcamp-hw5",
]
